<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/list_horizonal_matgin"
    android:layout_marginRight="@dimen/list_horizonal_matgin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/recent_scores"
        android:id="@+id/textView"
        android:gravity="center"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:textSize="@dimen/widget_header"
        android:contentDescription="@string/recent_scores"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id = "@+id/widget_scores_list"
        android:divider="@android:color/transparent"
        android:dividerHeight="@dimen/widget_divider"
        android:background="@color/grey01"
        android:contentDescription="@string/widget_scores_list"/>

    <!-- Empty view is show if list items are empty -->
    <TextView
        android:id="@+id/widget_empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_scores"
        android:textColor="@android:color/black"
        android:textSize="@dimen/widget_header"
        android:visibility="gone"
        android:background="@android:color/white"
        android:contentDescription="@string/no_scores_text"/>
</LinearLayout>
