<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/list_horizonal_matgin"
    android:layout_marginRight="@dimen/list_horizonal_matgin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id = "@+id/scores_list"
            android:divider="@android:color/transparent"
            android:dividerHeight="15sp"
            android:contentDescription="@string/scores_list"
            />

    <!-- Empty view is show if list items are empty -->
    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_scores"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:visibility="gone"
        android:contentDescription="@string/no_scores_text"/>
</LinearLayout>
